--- a/readme
+++ b/readme
@@ -1,3 +1,10 @@
 Hello and Welcome 
 
 for fun: source ~/.virtualenvs/cos333/bin/activate
+    
+
+index.html:
+- https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_cv&stacked=h
+- https://www.w3schools.com/icons/tryit.asp?filename=tryicons_fa-star-o
+- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav
+- https://www.w3schools.com/howto/howto_css_searchbar.asp
