eden + yoni: standardized header and footer, worked a bit on frontend

--- a/readme
+++ b/readme
@@ -4,6 +4,8 @@ for virtual env: source ~/.virtualenvs/cos333/bin/activate
 
 for CAS (run as terminal command): /Applications/Python\ 3.10/Install\ Certificates.command
 
+Smalt Blyue - #00468B
+
 index.html:
 - https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_cv&stacked=h
 - https://www.w3schools.com/icons/tryit.asp?filename=tryicons_fa-star-o
