added a dropdown and a landing home page

--- a/readme
+++ b/readme
@@ -12,3 +12,6 @@ index.html:
 - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav
 - https://www.w3schools.com/howto/howto_css_searchbar.asp
 - https://fontawesome.com/icons/user?s=solid
+
+Dropdown button:
+- https://www.w3schools.com/howto/howto_css_dropdown.asp
