fixing search descriptions on index

--- a/readme
+++ b/readme
@@ -18,3 +18,6 @@ Dropdown button:
 - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_buttons_animate3
 
 - https://www.cs.princeton.edu/news/teaching-faculty-key-opening-door
+
+Placeholder style:
+- https://www.w3schools.com/cssref/tryit.php?filename=trycss3_placeholder
